kubernetes/apps/default/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  hostnames:
    - "netbox.${SECRET_DOMAIN}"
    - "netbox.${SECRET_INTERNAL_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: netbox
          port: 80
